testsuite/poke.pkl/scons-diag-5.pk
/* { dg-do compile } */

deftype Packet = struct { byte n; byte[n] d; };
defvar p = Packet { n = 2UB };  /* { dg-error "not supported" } */
